Added functionality to view 3
Add data
Filter by polygon

--- a/src/app/views/view3/view3.html
+++ b/src/app/views/view3/view3.html
@@ -2,6 +2,10 @@
      class="cesiumButtons">
     <md-button
             class="md-raised"
+            ng-click="viewCtrl.createData()">Add Data to map
+    </md-button>
+    <md-button
+            class="md-raised"
             ng-if="!viewCtrl.drawing"
             ng-click="viewCtrl.draw()">Start Drawing
     </md-button>
