--- a/src/app/views/view3/view3.html
+++ b/src/app/views/view3/view3.html
@@ -1,22 +1,2 @@
-<div layout="row"
-     class="cesiumButtons">
-    <md-button
-            class="md-raised"
-            ng-click="viewCtrl.createData()">Add Data to map
-    </md-button>
-    <md-button
-            class="md-raised"
-            ng-if="!viewCtrl.drawing"
-            ng-click="viewCtrl.draw()">Start Drawing
-    </md-button>
-    <md-button
-            class="md-raised"
-            ng-if="viewCtrl.drawing"
-            ng-click="viewCtrl.stopDrawing()">Stop Drawing
-    </md-button>
+<div echo-directive="viewCtrl.echoOptions" echo-buttons id="echo1" class="echoContainer">
 </div>
-<div
-        cesium-directive="viewCtrl.cesiumConfig"
-        
-        cesium-polygon-drawer
-        cesium-filter></div>
