Added two forms

--- a/src/app/components/ngEcho/ngEcho.css
+++ b/src/app/components/ngEcho/ngEcho.css
@@ -5,7 +5,7 @@ svg {
     fill: none;
     stroke: black;
     font-family: Arial;
-    font-size: 3vh;
+    font-size: 10;
     font-weight: normal;
 }
 
