--- a/src/app/views/view3/view3.html
+++ b/src/app/views/view3/view3.html
@@ -1,2 +1,4 @@
-<div echo-directive="viewCtrl.echoOptions" echo-buttons id="echo1" class="echoContainer">
+
+
+<div echo-directive="viewCtrl.echoOptions" echo-buttons echo-header id="echo1" class="echoContainer">
 </div>
