--- a/src/app/views/view3/view3.html
+++ b/src/app/views/view3/view3.html
@@ -1,4 +1,4 @@
 
 
-<div echo-directive="viewCtrl.echoOptions" echo-buttons echo-header id="echo1" class="echoContainer">
+<div echo-directive="viewCtrl.echoOptions" echo-buttons echo-header style="width:500px; height:300px">
 </div>
