Trying to make the SVG align well in a flex-box

--- a/src/app/views/view3/view3.html
+++ b/src/app/views/view3/view3.html
@@ -1,4 +1,4 @@
 
 
-<div echo-directive="viewCtrl.echoOptions" echo-buttons echo-header style="width:580px; height:380px">
+<div echo-directive="viewCtrl.echoOptions" echo-buttons echo-header style="/*width:580px; height:380px*/">
 </div>
