--- a/src/app/components/ngEcho/ngEcho.css
+++ b/src/app/components/ngEcho/ngEcho.css
@@ -1,5 +1,14 @@
 
+.echo-graph {
+    position: relative;
+    flex: 1;
+}
+
+
 .echo-graph svg {
+    position: absolute;
+    max-width: 100%;
+    max-height: 100%;
     margin-top: 5px;
     border: 1px solid #f8f8f8;
     stroke-width: 1;
@@ -9,8 +18,6 @@
     font-size: 12px;
     font-weight: normal;
     overflow: auto;
-    width: 100%;
-    height: 100%;
 }
 
 .echo-graph circle.port {
