1. Moved the header toolbar under the container of the directive.  2. Added a wrapper div to the SVG, to handle its positioning below the buttons and the header, while maintaining its flex-ibility.

--- a/src/app/components/ngEcho/ngEcho.css
+++ b/src/app/components/ngEcho/ngEcho.css
@@ -1,9 +1,12 @@
 
 .echo-graph {
-    position: relative;
     flex: 1;
 }
 
+.echo-graph .echoSvgWrapper {
+    position: relative;
+    flex: 1;
+}
 
 .echo-graph svg {
     position: absolute;
