Renamed extension echoHeader to echoForm

--- a/src/app/components/ngEcho/ngEchoForm/ngEchoForm.css
+++ b/src/app/components/ngEcho/ngEchoForm/ngEchoForm.css
@@ -1,13 +1,13 @@
-.echoHeaderWrapper {
+.echoFormWrapper {
     margin: 2vh 2vw;
     padding-bottom: 2vh;
     border-bottom: solid 1px #d0d0d0;
 }
 
-.echoHeaderWrapper .margin-left {
+.echoFormWrapper .margin-left {
     margin-left: 2vw;
 }
 
-.echoHeaderWrapper input[type='number'] {
+.echoFormWrapper input[type='number'] {
     text-align: center;
 }
