--- a/src/app/components/ngEcho/ngEcho.css
+++ b/src/app/components/ngEcho/ngEcho.css
@@ -9,7 +9,7 @@
     flex: 1;
 }
 
-.echo-graph svg {
+.echo-graph svg.graph-svg {
     position: absolute;
     max-width: 100%;
     max-height: 100%;
