--- a/src/app/components/autoForceLayout/autoForceLayout.css
+++ b/src/app/components/autoForceLayout/autoForceLayout.css
@@ -38,3 +38,8 @@
 .auto-force-layout svg.graph-svg .node.fixed {
     fill: #f00;
 }
+
+.auto-force-layout .buttonsWrapper {
+    height: 20px;
+    background-color: #00A000;
+}
