--- a/src/app/views/viewAutoForceLayout/viewAutoForceLayout.html
+++ b/src/app/views/viewAutoForceLayout/viewAutoForceLayout.html
@@ -1,4 +1,2 @@
-<div ng-if="options.data">
-    <div auto-force-layout options="options">
+    <div ng-if="options.data" auto-force-layout options="options">
     </div>
-</div>
