Added a div for the test application

--- a/src/app/views/viewAutoForceLayout/viewAutoForceLayout.html
+++ b/src/app/views/viewAutoForceLayout/viewAutoForceLayout.html
@@ -1,2 +1,8 @@
-    <div ng-if="options.data" auto-force-layout options="options">
+<div id="view3" flex layout="column">
+    <div auto-force-layout options="options" flex>
     </div>
+    <div class="status" flex="10">
+        blablabla
+    </div>
+</div>
+
