--- a/src/app/components/autoForceLayout/autoForceLayout.css
+++ b/src/app/components/autoForceLayout/autoForceLayout.css
@@ -12,10 +12,11 @@
 }
 
 .auto-force-layout svg.graph-svg {
+    box-sizing: border-box;
     position: absolute;
     max-width: 100%;
     max-height: 100%;
-    margin-top: 5px;
+    /* margin-top: 5px; */
     border: 1px solid #e8e8e8;
     stroke-width: 1;
     fill: none;
