--- a/src/app/views/viewAutoForceLayout/viewAutoForceLayout.html
+++ b/src/app/views/viewAutoForceLayout/viewAutoForceLayout.html
@@ -1,5 +1,9 @@
 <div id="view3" flex layout="column">
-    <div auto-force-layout options="options" flex>
+    <div flex auto-force-layout
+         options="options"
+         on-node-hovered="setNodeHovered(item, on)"
+         on-link-hovered="setLinkHovered(item, on)"
+    >
     </div>
     <div class="status" flex="10">
         blablabla
