Tying the user's event handlers to events: hovering over a node causes a corresponding reaction in the user.

--- a/src/app/views/viewAutoForceLayout/viewAutoForceLayout.html
+++ b/src/app/views/viewAutoForceLayout/viewAutoForceLayout.html
@@ -6,7 +6,7 @@
     >
     </div>
     <div class="status" flex="10">
-        blablabla
+        <span>Last hovered node = {{lastHoveredNode.id}}</span>
     </div>
 </div>
 
