--- a/src/app/components/autoForceLayout/autoForceLayout.css
+++ b/src/app/components/autoForceLayout/autoForceLayout.css
@@ -52,8 +52,16 @@
     fill: #f00;
 }
 
+.auto-force-layout svg.graph-svg text.label {
+    fill: black;
+    stroke: none;
+    font-size: 10px;
+    pointer-events: none;
+}
+
 .auto-force-layout .buttonsWrapper {
     height: 10%;
+    color: gray;
     /*background-color: #00A000;*/
 }
 
@@ -63,7 +71,7 @@
 }
 
 .auto-force-layout .buttonsWrapper i:hover {
-    color: blue;
+    color: black;
 }
 
 .auto-force-layout .buttonsWrapper i:active {
