--- a/src/app/views/viewAutoForceLayout/viewAutoForceLayout.html
+++ b/src/app/views/viewAutoForceLayout/viewAutoForceLayout.html
@@ -6,7 +6,7 @@
     >
     </div>
     <div class="status" flex="10">
-        <span>Last hovered node = {{lastHoveredNode.id}}</span>
+        <span>Last hovered node = {{lastHoveredNode.label}}</span>
     </div>
 </div>
 
