Added shapes for the nodes (d3.svg.symbol)

--- a/src/app/components/autoForceLayout/autoForceLayout.css
+++ b/src/app/components/autoForceLayout/autoForceLayout.css
@@ -69,7 +69,7 @@
 
 .auto-force-layout .buttonsWrapper {
     height: 10%;
-    color: gray;
+    color: lightgray;
     /*background-color: #00A000;*/
 }
 
