--- a/src/app/views/main.html
+++ b/src/app/views/main.html
@@ -1,36 +1,37 @@
 <!-- Header -->
+<!--
 <md-toolbar layout-padding
             layout="row"
             layout-align="space-between center">
     <h2>{{mainCtrl.viewName}}</h2>
 </md-toolbar>
+-->
 
-<div layout="row"
+<div layout="column"
      flex>
     <!-- Menu -->
-    <md-sidenav md-component-id="right" md-is-locked-open="true" class="md-sidenav-left md-whiteframe-z2">
+    <md-toolbar md-component-id="right" md-is-locked-open="true" style="height:auto; min-height: initial; max-height: initial">
         <md-content flex=""
                     role="navigation"
-                    class="flex md-default-theme"
-                    layout-margin
-                    layout-padding>
+                    class="flex md-default-theme">
             <ul class="menu"
-                layout="column"
-                layout-align="start center">
-                <li layout="column"
-                    layout-margin
+                layout="row"
+                layout-align="start center"
+                style="margin: 0px">
+                <li layout="row"
                     layout-fill
                     ng-repeat="menuItem in mainCtrl.menuItems|filter:{url: '!' + '^'}">
                     <md-button ui-sref="{{menuItem.name}}"
                                class="md-raised"
                                layout-fill
-                               ng-class="{'md-warn': mainCtrl.viewName === menuItem.data.title}">
+                               ng-class="{'md-warn': mainCtrl.viewName === menuItem.data.title}"
+                               style="margin: 0px">
                         {{menuItem.data.title}}
                     </md-button>
                 </li>
             </ul>
         </md-content>
-    </md-sidenav>
+    </md-toolbar>
 
     <!-- Content -->
     <div ui-view
