--- a/src/app/views/viewAutoForceLayout/viewAutoForceLayout.html
+++ b/src/app/views/viewAutoForceLayout/viewAutoForceLayout.html
@@ -1,11 +1,11 @@
-<div id="view3" flex layout="column">
+<div id="view3" flex layout="row">
     <div flex auto-force-layout
          options="options"
          on-node-hovered="setNodeHovered(item, on)"
          on-link-hovered="setLinkHovered(item, on)"
     >
     </div>
-    <div class="status" flex="10">
+    <div class="status" flex="30">
         <span>Last hovered node = {{lastHoveredNode.label}}</span>
     </div>
 </div>
