Triggering node hover in and out of the graph (not finished)

--- a/src/app/views/main.html
+++ b/src/app/views/main.html
@@ -24,7 +24,7 @@
                     <md-button ui-sref="{{menuItem.name}}"
                                class="md-raised"
                                layout-fill
-                               ng-class="{'md-warn': mainCtrl.viewName === menuItem.data.title}"
+                               ng-class="{'md-primary': mainCtrl.viewName === menuItem.data.title}"
                                style="margin: 0px">
                         {{menuItem.data.title}}
                     </md-button>
