--- a/src/app/views/viewAutoForceLayout/viewAutoForceLayout.css
+++ b/src/app/views/viewAutoForceLayout/viewAutoForceLayout.css
@@ -1,10 +1,39 @@
 #view3 {
 }
 
-#view3 .status {
-    color: white;
-    background-color: blue;
-    width: 100%;
-    /*height: 3vh;*/
+#view3 .external-console {
+    border-left: 1px solid lightgray;
     font-size: 2vh;
+}
+
+#view3 .repeated-item {
+    border-bottom: 1px solid #ddd;
+    box-sizing: border-box;
+    height: 8vh;
+    padding-top: 2vh; }
+
+#view3 md-content {
+    margin: 16px; }
+
+#view3 md-virtual-repeat-container {
+    border-color: lightgray;
+    border-style: solid;
+    border-width: 1px 1px 0 0;
+}
+
+#view3 h3 {
+    text-align: center;
+    text-decoration: underline;
+}
+
+#view3 table {
+    width: 100%;
+}
+
+#view3 table.nodes-table tr.hovered {
+    background-color: lightgray;
+}
+
+#view3 table td {
+    text-align: center;
 }
