Node selection (cont.): implemened an inner handler/api pair

--- a/src/app/views/viewAutoForceLayout/viewAutoForceLayout.html
+++ b/src/app/views/viewAutoForceLayout/viewAutoForceLayout.html
@@ -4,6 +4,7 @@
          options="options"
          on-node-hovered="setNodeHovered(item, on)"
          on-link-hovered="setLinkHovered(item, on)"
+         on-node-selected="setNodeSelected(item, on, clearOldSelection)"
     >
     </div>
 
