Node selection: application side (not finished)

--- a/src/app/views/viewAutoForceLayout/viewAutoForceLayout.css
+++ b/src/app/views/viewAutoForceLayout/viewAutoForceLayout.css
@@ -34,6 +34,10 @@
     background-color: lightgray;
 }
 
+#view3 table tr.selected {
+    background-color: lightgray;
+}
+
 #view3 table td {
     text-align: center;
 }
