--- a/src/app/views/viewAutoForceLayout/viewAutoForceLayout.html
+++ b/src/app/views/viewAutoForceLayout/viewAutoForceLayout.html
@@ -19,11 +19,12 @@
                                 <th>id</th>
                                 <th>label</th>
                             </tr>
-                        <tr ng-class='{hovered: node.hovered}'
+                        <tr md-virtual-repeat="node in options.data.nodes"
+                            ng-class='{hovered: node.hovered, selected: node.selected}'
                             class="repeated-item"
                             ng-mouseenter="inSetNodeHovered(node, true)"
                             ng-mouseleave="inSetNodeHovered(node, false)"
-                            md-virtual-repeat="node in options.data.nodes"
+                            ng-click="onNodeClicked(node)"
                             flex="">
                             <td class="id">{{node.id}}</td>
                             <td class="label">{{node.label}}</td>
