Now each dragged element not only gets fixed, but remains fixed. Also, I mark fixed elements by a dotted border

--- a/src/app/components/autoForceLayout/autoForceLayout.css
+++ b/src/app/components/autoForceLayout/autoForceLayout.css
@@ -57,7 +57,8 @@
 }
 
 .auto-force-layout svg.graph-svg .node.fixed {
-    fill: #f00;
+    stroke: black;
+    stroke-dasharray: 1,1;
 }
 
 .auto-force-layout svg.graph-svg text.label {
