--- a/src/app/views/viewAutoForceLayout/viewAutoForceLayout.html
+++ b/src/app/views/viewAutoForceLayout/viewAutoForceLayout.html
@@ -9,16 +9,24 @@
     </div>
 
     <div class="external-console" flex="30" layout="column">
-        <div flex>Last hovered node = {{lastHoveredNode.label}}</div>
+        <div flex>
+            <p>Last hovered node = {{lastHoveredNode.label}}</p>
+            <div>
+                <label for="numOfNodes">Number of nodes:</label>
+                <input type="range" id="numOfNodes" ng-model="numOfNodes" min="10" max="1000">
+                <input type="text" readonly value="{{numOfNodes}}">
+                <button ng-click="recreateGraph()">Recreate graph</button>
+            </div>
+        </div>
         <div flex layout="row">
             <div flex layout="column">
                 <h3>Nodes</h3>
-                    <md-virtual-repeat-container flex="">
-                        <table class="nodes-table" flex>
-                            <tr class="repeated-item">
-                                <th>id</th>
-                                <th>label</th>
-                            </tr>
+                <md-virtual-repeat-container flex="">
+                    <table class="nodes-table" flex>
+                        <tr class="repeated-item">
+                            <th>id</th>
+                            <th>label</th>
+                        </tr>
                         <tr md-virtual-repeat="node in options.data.nodes"
                             ng-class='{hovered: node.hovered, selected: node.selected}'
                             class="repeated-item"
@@ -29,8 +37,8 @@
                             <td class="id">{{node.id}}</td>
                             <td class="label">{{node.label}}</td>
                         </tr>
-                        </table>
-                    </md-virtual-repeat-container>
+                    </table>
+                </md-virtual-repeat-container>
             </div>
             <div flex layout="column">
                 <h3>Links</h3>
@@ -38,8 +46,8 @@
                     <table class="links-table" flex>
                         <tr class="repeated-item">
                             <th>id</th>
-                            <th>source id</th>
-                            <th>target id</th>
+                            <th>source</th>
+                            <th>target</th>
                         </tr>
                         <tr md-virtual-repeat="link in options.data.links"
                             ng-class='{hovered: link.hovered}'
@@ -48,8 +56,8 @@
                             ng-mouseleave="inSetLinkHovered(link, false)"
                             flex="">
                             <td class="id">{{link.id}}</td>
-                            <td class="sourceID">{{link.sourceID}}</td>
-                            <td class="targetID">{{link.targetID}}</td>
+                            <td>{{link.sourceLabel}}</td>
+                            <td>{{link.targetLabel}}</td>
                         </tr>
                     </table>
                 </md-virtual-repeat-container>
