Started preparations to handle nodes & edges (hover & selection) in the same way

--- a/src/app/views/viewAutoForceLayout/viewAutoForceLayout.html
+++ b/src/app/views/viewAutoForceLayout/viewAutoForceLayout.html
@@ -9,7 +9,7 @@
     </div>
 
     <div class="external-console" flex="30" layout="column">
-        <div flex>
+        <div>
             <p>Last hovered node = {{lastHoveredNode.label}}</p>
             <div>
                 <label for="numOfNodes">Number of nodes:</label>
