Renaming "link" to "edge" .. Supporting edge color (not finished). Application data is in one array (nodes and links), instead of two (not finished) Handling hover and selection uniformly for nodes & edges (not finished) Using the common graph data for "binding" hover & select statuses (not finished)

--- a/src/app/components/autoForceLayout/autoForceLayout.css
+++ b/src/app/components/autoForceLayout/autoForceLayout.css
@@ -27,12 +27,12 @@
     overflow: auto;
 }
 
-.auto-force-layout svg.graph-svg .link {
+.auto-force-layout svg.graph-svg .edge {
     stroke: lightgray;
     stroke-width: 1.5px;
 }
 
-.auto-force-layout svg.graph-svg .link.hovered {
+.auto-force-layout svg.graph-svg .edge.hovered {
     stroke: black;
     stroke-dasharray: 1,1;
 }
