--- a/src/app/views/viewAutoForceLayout/viewAutoForceLayout.html
+++ b/src/app/views/viewAutoForceLayout/viewAutoForceLayout.html
@@ -3,7 +3,7 @@
     <div flex auto-force-layout
          options="options"
          on-node-hovered="setNodeHovered(item, on)"
-         on-link-hovered="setLinkHovered(item, on)"
+         on-edge-hovered="setEdgeHovered(item, on)"
          on-node-selected="setNodeSelected(item, on, clearOldSelection)"
     >
     </div>
@@ -27,7 +27,7 @@
                             <th>id</th>
                             <th>label</th>
                         </tr>
-                        <tr md-virtual-repeat="node in options.data.nodes"
+                        <tr md-virtual-repeat="node in graph.nodes"
                             ng-class='{hovered: node.hovered, selected: node.selected}'
                             class="repeated-item"
                             ng-mouseenter="inSetNodeHovered(node, true)"
@@ -41,23 +41,23 @@
                 </md-virtual-repeat-container>
             </div>
             <div flex layout="column">
-                <h3>Links</h3>
+                <h3>Edges</h3>
                 <md-virtual-repeat-container flex="">
-                    <table class="links-table" flex>
+                    <table class="edges-table" flex>
                         <tr class="repeated-item">
                             <th>id</th>
                             <th>source</th>
                             <th>target</th>
                         </tr>
-                        <tr md-virtual-repeat="link in options.data.links"
-                            ng-class='{hovered: link.hovered}'
+                        <tr md-virtual-repeat="edge in graph.edges"
+                            ng-class='{hovered: edge.hovered}'
                             class="repeated-item"
-                            ng-mouseenter="inSetLinkHovered(link, true)"
-                            ng-mouseleave="inSetLinkHovered(link, false)"
+                            ng-mouseenter="inSetEdgeHovered(edge, true)"
+                            ng-mouseleave="inSetEdgeHovered(edge, false)"
                             flex="">
-                            <td class="id">{{link.id}}</td>
-                            <td>{{link.sourceLabel}}</td>
-                            <td>{{link.targetLabel}}</td>
+                            <td class="id">{{edge.id}}</td>
+                            <td>{{edge.sourceLabel}}</td>
+                            <td>{{edge.targetLabel}}</td>
                         </tr>
                     </table>
                 </md-virtual-repeat-container>
