--- a/src/app/views/viewAutoForceLayout/viewAutoForceLayout.html
+++ b/src/app/views/viewAutoForceLayout/viewAutoForceLayout.html
@@ -27,7 +27,7 @@
                             <th>id</th>
                             <th>label</th>
                         </tr>
-                        <tr md-virtual-repeat="node in graph.nodes"
+                        <tr md-virtual-repeat="node in nodeDataArray"
                             ng-class='{hovered: node.hovered, selected: node.selected}'
                             class="repeated-item"
                             ng-mouseenter="inSetNodeHovered(node, true)"
@@ -49,7 +49,7 @@
                             <th>source</th>
                             <th>target</th>
                         </tr>
-                        <tr md-virtual-repeat="edge in graph.edges"
+                        <tr md-virtual-repeat="edge in edgeDataArray"
                             ng-class='{hovered: edge.hovered}'
                             class="repeated-item"
                             ng-mouseenter="inSetEdgeHovered(edge, true)"
