--- a/src/app/views/viewAutoForceLayout/viewAutoForceLayout.html
+++ b/src/app/views/viewAutoForceLayout/viewAutoForceLayout.html
@@ -2,8 +2,7 @@
 
     <div flex auto-force-layout
          options="options"
-         on-node-hovered="setNodeHovered(item, on)"
-         on-edge-hovered="setEdgeHovered(item, on)"
+         on-hovered="onHoveredOutside(item)"
          on-node-selected="setNodeSelected(item, on, clearOldSelection)"
     >
     </div>
@@ -30,8 +29,8 @@
                         <tr md-virtual-repeat="node in nodeDataArray"
                             ng-class='{hovered: node.hovered, selected: node.selected}'
                             class="repeated-item"
-                            ng-mouseenter="inSetNodeHovered(node, true)"
-                            ng-mouseleave="inSetNodeHovered(node, false)"
+                            ng-mouseenter="onHoveredInside(node, true)"
+                            ng-mouseleave="onHoveredInside(node, false)"
                             ng-click="onNodeClicked($event, node)"
                             flex="">
                             <td class="id">{{node.id}}</td>
@@ -52,8 +51,8 @@
                         <tr md-virtual-repeat="edge in edgeDataArray"
                             ng-class='{hovered: edge.hovered}'
                             class="repeated-item"
-                            ng-mouseenter="inSetEdgeHovered(edge, true)"
-                            ng-mouseleave="inSetEdgeHovered(edge, false)"
+                            ng-mouseenter="onHoveredInside(edge, true)"
+                            ng-mouseleave="onHoveredInside(edge, false)"
                             flex="">
                             <td class="id">{{edge.id}}</td>
                             <td>{{edge.sourceLabel}}</td>
