--- a/src/app/views/viewAutoForceLayout/viewAutoForceLayout.html
+++ b/src/app/views/viewAutoForceLayout/viewAutoForceLayout.html
@@ -29,9 +29,9 @@
                         <tr md-virtual-repeat="node in nodeDataArray"
                             ng-class='{hovered: node.hovered, selected: node.selected}'
                             class="repeated-item"
-                            ng-mouseenter="onHoveredInside(node, true)"
-                            ng-mouseleave="onHoveredInside(node, false)"
-                            ng-click="onNodeClicked($event, node)"
+                            ng-mouseenter="onHoverInside(node, true)"
+                            ng-mouseleave="onHoverInside(node, false)"
+                            ng-click="onClick($event, node)"
                             flex="">
                             <td class="id">{{node.id}}</td>
                             <td class="label">{{node.label}}</td>
@@ -51,8 +51,8 @@
                         <tr md-virtual-repeat="edge in edgeDataArray"
                             ng-class='{hovered: edge.hovered}'
                             class="repeated-item"
-                            ng-mouseenter="onHoveredInside(edge, true)"
-                            ng-mouseleave="onHoveredInside(edge, false)"
+                            ng-mouseenter="onHoverInside(edge, true)"
+                            ng-mouseleave="onHoverInside(edge, false)"
                             flex="">
                             <td class="id">{{edge.id}}</td>
                             <td>{{edge.sourceLabel}}</td>
