--- a/src/app/views/viewAutoForceLayout/viewAutoForceLayout.html
+++ b/src/app/views/viewAutoForceLayout/viewAutoForceLayout.html
@@ -2,8 +2,8 @@
 
     <div flex auto-force-layout
          options="options"
-         on-hovered="onHoveredOutside(item)"
-         on-node-selected="setNodeSelected(item, on, clearOldSelection)"
+         on-hover="onHoverOutside(item)"
+         on-select="onSelectOutside()"
     >
     </div>
 
@@ -26,7 +26,7 @@
                             <th>id</th>
                             <th>label</th>
                         </tr>
-                        <tr md-virtual-repeat="node in nodeDataArray"
+                        <tr md-virtual-repeat="node in data[NODES]"
                             ng-class='{hovered: node.hovered, selected: node.selected}'
                             class="repeated-item"
                             ng-mouseenter="onHoverInside(node, true)"
@@ -48,11 +48,12 @@
                             <th>source</th>
                             <th>target</th>
                         </tr>
-                        <tr md-virtual-repeat="edge in edgeDataArray"
-                            ng-class='{hovered: edge.hovered}'
+                        <tr md-virtual-repeat="edge in data[EDGES]"
+                            ng-class='{hovered: edge.hovered, selected: edge.selected}'
                             class="repeated-item"
                             ng-mouseenter="onHoverInside(edge, true)"
                             ng-mouseleave="onHoverInside(edge, false)"
+                            ng-click="onClick($event, edge)"
                             flex="">
                             <td class="id">{{edge.id}}</td>
                             <td>{{edge.sourceLabel}}</td>
