--- a/src/app/views/viewAutoForceLayout/viewAutoForceLayout.html
+++ b/src/app/views/viewAutoForceLayout/viewAutoForceLayout.html
@@ -9,12 +9,17 @@
 
     <div class="external-console" flex="30" layout="column">
         <div>
-            <div layout="row" layout-padding="">Last hovered node = {{lastHoveredNode.label}}</div>
-            <div layout="row" layout-padding="" layout-align="space-between center">
-                <label for="numOfNodes">Number of nodes:</label>
-                <input type="text" pattern="\d+" ng-model="numOfNodes" size="4">
-                <input type="range" id="numOfNodes" ng-model="numOfNodes" min="10" max="1000">
-                <button ng-click="recreateGraph()">Recreate graph</button>
+            <!--<div layout="row" layout-padding="">Last hovered node = {{lastHoveredNode.label}}</div>-->
+            <div layout="row" layout-margin="" layout-align="space-between center">
+                <label flex="" for="numOfNodes">Number of nodes:</label>
+                <input flex="" type="text" pattern="\d+" ng-model="numOfNodes" size="4" title="number of nodes to generate">
+                <input flex="" type="range" id="numOfNodes" ng-model="numOfNodes" min="10" max="1000">
+                <button flex="" ng-click="createRandomGraph()">Create random graph</button>
+            </div>
+            <div layout="row" layout-margin="" layout-align="space-between center">
+                <label flex="" for="graph-data-file-name">File name:</label>
+                <input flex="50" type="text" id="graph-data-file-name" ng-model="graphDataFileName">
+                <button flex="" ng-click="createGraphFromFile()">Create graph from file</button>
             </div>
         </div>
         <div flex layout="row">
