--- a/src/app/views/viewAutoForceLayout/viewAutoForceLayout.html
+++ b/src/app/views/viewAutoForceLayout/viewAutoForceLayout.html
@@ -1,9 +1,9 @@
 <div id="view3" flex layout="row">
 
     <div flex auto-force-layout
-         options="options"
-         on-hover="onHoverOutside(item)"
-         on-select="onSelectOutside()"
+         options="ctrl.options"
+         on-hover="ctrl.onHoverOutside(item)"
+         on-select="ctrl.onSelectOutside()"
     >
     </div>
 
@@ -12,18 +12,13 @@
             <!--<div layout="row" layout-padding="">Last hovered node = {{lastHoveredNode.label}}</div>-->
             <div layout="row" layout-margin="" layout-align="space-between center">
                 <label flex="" for="numOfNodes">Number of nodes:</label>
-                <input flex="" type="text" pattern="\d+" ng-model="numOfNodes" size="4" title="number of nodes to generate">
-                <input flex="" type="range" id="numOfNodes" ng-model="numOfNodes" min="10" max="1000">
-                <button flex="" ng-click="createRandomGraph()">Create random graph</button>
+                <input flex="" type="text" pattern="\d+" ng-model="ctrl.numOfNodes" size="4" title="number of nodes to generate">
+                <input flex="" type="range" id="numOfNodes" ng-model="ctrl.numOfNodes" min="10" max="1000">
+                <button flex="" ng-click="ctrl.createRandomGraph()">Create random graph</button>
             </div>
             <div layout="row" layout-margin="" layout-align="start center">
                 <label flex="20" for="graph-data-file-read">Create graph from file:</label>
-                <input flex="" type="file" id="graph-data-file-read" file-input-on-change="createGraphFromFile">
-                <!--
-                <label flex="" for="graph-data-file-name">File name:</label>
-                <input flex="50" type="text" id="graph-data-file-name" ng-model="graphDataFileName">
-                <button flex="" ng-click="createGraphFromFile()">Create graph from file</button>
-                -->
+                <input flex="" type="file" id="graph-data-file-read" file-input-on-change="ctrl.createGraphFromFile">
             </div>
         </div>
         <div flex layout="row">
@@ -35,12 +30,12 @@
                             <th>id</th>
                             <th>label</th>
                         </tr>
-                        <tr md-virtual-repeat="node in data[NODES]"
+                        <tr md-virtual-repeat="node in ctrl.data[ctrl.NODES]"
                             ng-class='{hovered: node.hovered, selected: node.selected}'
                             class="repeated-item"
-                            ng-mouseenter="onHoverInside(node, true)"
-                            ng-mouseleave="onHoverInside(node, false)"
-                            ng-click="onClick($event, node)"
+                            ng-mouseenter="ctrl.onHoverInside(node, true)"
+                            ng-mouseleave="ctrl.onHoverInside(node, false)"
+                            ng-click="ctrl.onClick($event, node)"
                             flex="">
                             <td class="id">{{node.id}}</td>
                             <td class="label">{{node.label}}</td>
@@ -57,12 +52,12 @@
                             <th>source</th>
                             <th>target</th>
                         </tr>
-                        <tr md-virtual-repeat="edge in data[EDGES]"
+                        <tr md-virtual-repeat="edge in ctrl.data[ctrl.EDGES]"
                             ng-class='{hovered: edge.hovered, selected: edge.selected}'
                             class="repeated-item"
-                            ng-mouseenter="onHoverInside(edge, true)"
-                            ng-mouseleave="onHoverInside(edge, false)"
-                            ng-click="onClick($event, edge)"
+                            ng-mouseenter="ctrl.onHoverInside(edge, true)"
+                            ng-mouseleave="ctrl.onHoverInside(edge, false)"
+                            ng-click="ctrl.onClick($event, edge)"
                             flex="">
                             <td class="id">{{edge.id}}</td>
                             <td>{{edge.sourceLabel}}</td>
